# cpp_project_templates

./: .gitignore  README.md
project_googlebenchmark/: CMakeLists.txt
project_googlebenchmark/src/: benchmark.cpp  main.cpp
project_googlebenchmark/src/lib/: CMakeLists.txt  fibonacci.cpp  fibonacci.h
project_googletest/: CMakeLists.txt  CMakeLists.txt.googletest
project_googletest/src/: CMakeLists.txt  tests.cpp
project_simple/: CMakeLists.txt
project_simple/src/: main.cpp
